objects/ssot__Category__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryStatus__c</fullName>
        <label>Category Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Category Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsKnowledgeCategory__c</fullName>
        <label>Is Knowledge Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRootCategory__c</fullName>
        <label>Is Root Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTagCategory__c</fullName>
        <label>Is Tag Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTaxonomyCategory__c</fullName>
        <label>Is Taxonomy Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTopicCategory__c</fullName>
        <label>Is Topic Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUserLabel__c</fullName>
        <label>Is User Label</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LabelName__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCategoryId__c</fullName>
        <label>Parent Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SortOrderNumber__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432555303_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category_ParentCategoryId_map_Catego_rel</label>
        <referenceTo>ssot__Category__dlm</referenceTo>
        <relationshipLabel>Category_ParentCategoryId_map_Catego_rel</relationshipLabel>
        <relationshipName>rel_1710432555303_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>